@@ -1,3 +1,3 @@
 #! /usr/bin/python
 
-version = "0.7.1"
+version = "0.7.1+"
