@@ -1,7 +1,7 @@
 \input texinfo @c -*-texinfo-*-
 @c %**start of header
 @setfilename buildbot.info
-@settitle BuildBot Manual 0.7.1
+@settitle BuildBot Manual 0.7.1+
 @c %**end of header
 
 @copying
